runsettings file added, namespaces are fixed and debug port number updated

--- a/MvcApplication/Views/Employee/EmployeeDetail.cshtml
+++ b/MvcApplication/Views/Employee/EmployeeDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model TestApplication.Models.Employee
+﻿@model MvcApplication.Employee
 <h2>Edit Employee Details</h2>
 
 <div id="EmployeeDetailDiv">
