--- a/MvcApplication/Views/Employee/Index.cshtml
+++ b/MvcApplication/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TestApplication.Models.Employee>
+﻿@model IEnumerable<MvcApplication.Employee>
 
 @{
     ViewBag.Title = "EmployeeList";
